--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,14 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8"
 wasm-bindgen = "0.2"
-web-sys = "0.3"
+web-sys = { version = "0.3", features = [
+  "Window",
+  "Document",
+  "HtmlCanvasElement",
+  "CanvasRenderingContext2d",
+  "Element",
+  "MouseEvent",
+] }
 js-sys = "0.3"
 gloo-timers = "0.3"
 log = "0.4"
