--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ web-sys = { version = "0.3", features = [
   "CanvasRenderingContext2d",
   "Element",
   "MouseEvent",
+  "DomRect",
 ] }
 js-sys = "0.3"
 gloo-timers = "0.3"
