--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,5 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: trunk build --release
+      run: |
+        rustup target add wasm32-unknown-unknown
+        cargo install trunk
+        trunk build --release
     
