--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,12 +13,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: |
-        rustup target add wasm32-unknown-unknown
-        cargo install trunk
-        trunk build --release
+    - uses: actions/checkout@v5
+
+    - name: install targets
+      run: rustup target add wasm32-unknown-unknown
+    
+    - name: Cache cargo
+      uses: Swatinem/rust-cache@v2
+
+    - name: Install trunk
+      run: cargo install trunk
+
+    - name: Build with trunk
+      run: trunk build --release
+
     - name: Deploy to Cloudflare Pages
       uses: cloudflare/wrangler-action@v3
       with:
