--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,14 +21,16 @@ jobs:
     - name: Cache cargo
       uses: Swatinem/rust-cache@v2
 
-    - name: Install trunk
-      run: cargo install trunk
+    # - name: Install trunk
+    #   run: cargo install trunk
 
-    - name: Build with trunk
-      run: trunk build --release
+    # - name: Build with trunk
+    #   run: trunk build --release
 
     - name: Deploy to Cloudflare Pages
       uses: cloudflare/wrangler-action@v3
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        command: pages deploy dist --project-name=conquer-your-universe
+        wranglerVersion: "4.42.0"
     
