--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ web-sys = { version = "0.3", features = [
   "Element",
   "MouseEvent",
   "DomRect",
+  "SvgsvgElement",
 ] }
 js-sys = "0.3"
 gloo-timers = "0.3"
