--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ web-sys = { version = "0.3", features = [
   "MouseEvent",
   "DomRect",
   "SvgsvgElement",
+  "Performance",
 ] }
 js-sys = "0.3"
 gloo-timers = "0.3"
@@ -25,3 +26,4 @@ log = "0.4"
 wasm-logger = "0.2"
 chrono = { version = "0.4", features = ["serde"] }
 lazy_static = "1.4"
+gloo = "0.11.0"
