--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,4 @@ log = "0.4"
 wasm-logger = "0.2"
 chrono = { version = "0.4", features = ["serde"] }
 lazy_static = "1.4"
-gloo = "0.11.0"
+gloo = { version = "0.11.0", features = ["storage"] }
