--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,21 @@ web-sys = { version = "0.3", features = [
   "Window",
   "Document",
   "HtmlCanvasElement",
+  "HtmlInputElement",
+  "HtmlAnchorElement",
   "CanvasRenderingContext2d",
   "Element",
   "MouseEvent",
   "DomRect",
   "SvgsvgElement",
   "Performance",
+  "Event",
+  "File",
+  "FileList",
+  "FileReader",
+  "Blob",
+  "BlobPropertyBag",
+  "Url",
 ] }
 js-sys = "0.3"
 gloo-timers = "0.3"
