--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,12 @@ jobs:
     steps:
     - uses: actions/checkout@v5
 
+    - uses: pnpm/action-setup@v4
+      name: Install pnpm
+      with:
+        version: 10
+        run_install: false
+
     - name: Install node
       uses: actions/setup-node@v5
       with:
